--- a/vkApi.ipynb
+++ b/vkApi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -30,142 +30,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "77\n"
+      "{\n",
+      "    \"response\": {\n",
+      "        \"count\": 1, \n",
+      "        \"items\": [\n",
+      "            {\n",
+      "                \"in_read\": 1, \n",
+      "                \"message\": {\n",
+      "                    \"body\": \"ВАЛИ ОТСЮДА БОМЖАРА\", \n",
+      "                    \"date\": 1473535694, \n",
+      "                    \"id\": 2, \n",
+      "                    \"out\": 1, \n",
+      "                    \"random_id\": -1747308378, \n",
+      "                    \"read_state\": 1, \n",
+      "                    \"title\": \" ... \", \n",
+      "                    \"user_id\": 8438153\n",
+      "                }, \n",
+      "                \"out_read\": 2\n",
+      "            }\n",
+      "        ]\n",
+      "    }\n",
+      "}\n"
      ]
     }
    ],
    "source": [
     "vk_url=\"https://api.vkontakte.ru/method/\"\n",
-    "uid='21250211'\n",
+    "access_token='84bf24ce01548f2a85bcd4d2577d5b5cc6007b894b79d4f471f4f57346bd52aa08e0733ce81d69e2eafe2'\n",
     "\n",
-    "resp = requests.post(vk_url+'friends.get',\n",
-    "                'user_id=%s&fields=uid,first_name,last_name,photo' % uid)\n",
+    "resp = requests.get(vk_url+'messages.getDialogs',\n",
+    "                '&access_token={}&v=5.53'.format(access_token))\n",
     "\n",
-    "frends_id=[]\n",
-    "\n",
-    "for row in resp.json()['response']:\n",
-    "    frends_id.append(row['uid'])\n",
+    "result = resp.json()\n",
     "    \n",
-    "print len(frends_id)\n",
-    "    \n",
-    "# print (json.dumps(frends_id, indent=4, sort_keys=True, ensure_ascii=False))\n"
+    "print (json.dumps(result, indent=4, sort_keys=True, ensure_ascii=False))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1000\n",
-      "[44272794]\n",
-      "2000\n",
-      "[]\n",
-      "3000\n",
-      "[]\n",
-      "4000\n",
-      "[132738696, 133410355]\n",
-      "5000\n",
-      "[]\n",
-      "6000\n",
-      "[]\n",
-      "7000\n",
-      "[]\n",
-      "8000\n",
-      "[]\n",
-      "9000\n",
-      "[]\n",
-      "[]\n",
-      "10000\n",
-      "[]\n",
-      "[]\n",
-      "7131\n"
-     ]
-    }
-   ],
-   "source": [
-    "vk_url=\"https://api.vkontakte.ru/method/\"\n",
-    "gid='29964138'\n",
-    "\n",
-    "i =0\n",
-    "group_id=[]\n",
-    "\n",
-    "while i<10000:\n",
-    "    i=i+1000\n",
-    "    \n",
-    "    print i\n",
-    "\n",
-    "    resp = requests.post(vk_url+'groups.getMembers',\n",
-    "                    'group_id={}&count=1000&offset={}'.format(gid, i))\n",
-    "\n",
-    "#     print resp.json()\n",
-    "\n",
-    "    raznica=list(set(resp.json()['response']['users']) & set(frends_id))  \n",
-    "    print raznica \n",
-    "    \n",
-    "    if i>8000:\n",
-    "        print (json.dumps(resp.json()['response']['users'], indent=4, sort_keys=True, ensure_ascii=False))\n",
-    "        \n",
-    "\n",
-    "    for row in resp.json()['response']['users']:\n",
-    "\n",
-    "        group_id.append(row)\n",
-    "         \n",
-    "    \n",
-    "\n",
-    "print len(group_id)\n",
-    "    \n",
-    "# print (json.dumps(frends_id, indent=4, sort_keys=True, ensure_ascii=False))\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[132738696, 44272794, 133410355]\n"
-     ]
-    }
-   ],
-   "source": [
-    "raznica=list(set(group_id) & set(frends_id))  \n",
-    "print raznica  \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-6cad211e1730>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mgroup_id\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m9998\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
-   "source": [
-    "print (group_id[9998])"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
