--- a/vkApi.ipynb
+++ b/vkApi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "vk_url=\"https://api.vkontakte.ru/method/\"\n",
+    "access_token='84bf24ce01548f2a85bcd4d2577d5b5cc6007b894b79d4f471f4f57346bd52aa08e0733ce81d69e2eafe2'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -55,10 +67,54 @@
     }
    ],
    "source": [
-    "vk_url=\"https://api.vkontakte.ru/method/\"\n",
-    "access_token='84bf24ce01548f2a85bcd4d2577d5b5cc6007b894b79d4f471f4f57346bd52aa08e0733ce81d69e2eafe2'\n",
-    "\n",
     "resp = requests.get(vk_url+'messages.getDialogs',\n",
+    "                '&access_token={}&v=5.53'.format(access_token))\n",
+    "\n",
+    "result = resp.json()\n",
+    "    \n",
+    "print (json.dumps(result, indent=4, sort_keys=True, ensure_ascii=False))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"error\": {\n",
+      "        \"error_code\": 100, \n",
+      "        \"error_msg\": \"One of the parameters specified was missing or invalid: you should specify peer_id, user_id, domain, chat_id or user_ids param\", \n",
+      "        \"request_params\": [\n",
+      "            {\n",
+      "                \"key\": \"oauth\", \n",
+      "                \"value\": \"1\"\n",
+      "            }, \n",
+      "            {\n",
+      "                \"key\": \"method\", \n",
+      "                \"value\": \"messages.send\"\n",
+      "            }, \n",
+      "            {\n",
+      "                \"key\": \"\", \n",
+      "                \"value\": \"\"\n",
+      "            }, \n",
+      "            {\n",
+      "                \"key\": \"v\", \n",
+      "                \"value\": \"5.53\"\n",
+      "            }\n",
+      "        ]\n",
+      "    }\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "resp = requests.get(vk_url+'messages.send',\n",
     "                '&access_token={}&v=5.53'.format(access_token))\n",
     "\n",
     "result = resp.json()\n",
@@ -77,6 +133,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [Root]",
    "language": "python",
