--- a/vkApi.ipynb
+++ b/vkApi.ipynb
@@ -73,7 +73,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "   dsafdfadsf\n"
+   ]
   }
  ],
  "metadata": {
