--- a/vkApi-Talgat.ipynb
+++ b/vkApi-Talgat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -45,67 +45,28 @@
      "text": [
       "{\n",
       "    \"response\": {\n",
-      "        \"count\": 3, \n",
-      "        \"items\": [\n",
-      "            {\n",
-      "                \"in_read\": 104, \n",
-      "                \"message\": {\n",
-      "                    \"body\": \"hfh\", \n",
-      "                    \"date\": 1473580154, \n",
-      "                    \"id\": 104, \n",
-      "                    \"out\": 0, \n",
-      "                    \"read_state\": 1, \n",
-      "                    \"title\": \" ... \", \n",
-      "                    \"user_id\": 8438153\n",
-      "                }, \n",
-      "                \"out_read\": 103\n",
-      "            }, \n",
-      "            {\n",
-      "                \"in_read\": 62, \n",
-      "                \"message\": {\n",
-      "                    \"body\": \"БРОООООО\", \n",
-      "                    \"date\": 1473553324, \n",
-      "                    \"id\": 63, \n",
-      "                    \"out\": 1, \n",
-      "                    \"random_id\": 0, \n",
-      "                    \"read_state\": 1, \n",
-      "                    \"title\": \" ... \", \n",
-      "                    \"user_id\": 37525550\n",
-      "                }, \n",
-      "                \"out_read\": 63\n",
-      "            }, \n",
-      "            {\n",
-      "                \"in_read\": 11, \n",
-      "                \"message\": {\n",
-      "                    \"body\": \"Сейчас с вами свяжутся\", \n",
-      "                    \"date\": 1473541932, \n",
-      "                    \"id\": 12, \n",
-      "                    \"out\": 1, \n",
-      "                    \"random_id\": 0, \n",
-      "                    \"read_state\": 1, \n",
-      "                    \"title\": \" ... \", \n",
-      "                    \"user_id\": 70233893\n",
-      "                }, \n",
-      "                \"out_read\": 12\n",
-      "            }\n",
-      "        ]\n",
+      "        \"count\": 0, \n",
+      "        \"in_read\": 0, \n",
+      "        \"items\": [], \n",
+      "        \"out_read\": 0\n",
       "    }\n",
       "}\n"
      ]
     }
    ],
    "source": [
-    "resp = requests.get(vk_url+'messages.getDialogs',\n",
-    "                '&access_token={}&v=5.53'.format(access_token))\n",
+    "resp = requests.get(vk_url+'messages.getHistory',\n",
+    "                '&user_id={}&peer_id={}&access_token={}&v=5.53'\n",
+    "                    .format(8438153, '-1747308378', access_token))\n",
     "\n",
     "result = resp.json()\n",
     "mgt = result    \n",
-    "print (json.dumps(result, indent=4, sort_keys=True, ensure_ascii=False))\n"
+    "print (json.dumps(mgt, indent=4, sort_keys=True, ensure_ascii=False))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -127,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -138,34 +99,34 @@
      "text": [
       "{\n",
       "    \"response\": {\n",
-      "        \"count\": 33, \n",
+      "        \"count\": 68, \n",
       "        \"items\": [\n",
       "            {\n",
-      "                \"body\": \"hfh\", \n",
-      "                \"date\": 1473580154, \n",
-      "                \"id\": 104, \n",
+      "                \"body\": \"AИС-11\", \n",
+      "                \"date\": 1473589707, \n",
+      "                \"id\": 168, \n",
       "                \"out\": 0, \n",
       "                \"read_state\": 1, \n",
       "                \"title\": \" ... \", \n",
-      "                \"user_id\": 8438153\n",
+      "                \"user_id\": 70233893\n",
       "            }, \n",
       "            {\n",
-      "                \"body\": \"[\", \n",
-      "                \"date\": 1473576941, \n",
-      "                \"id\": 103, \n",
+      "                \"body\": \"Bro\", \n",
+      "                \"date\": 1473589599, \n",
+      "                \"id\": 163, \n",
       "                \"out\": 0, \n",
       "                \"read_state\": 1, \n",
       "                \"title\": \" ... \", \n",
-      "                \"user_id\": 8438153\n",
+      "                \"user_id\": 70233893\n",
       "            }, \n",
       "            {\n",
-      "                \"body\": \"2\", \n",
-      "                \"date\": 1473576665, \n",
-      "                \"id\": 100, \n",
+      "                \"body\": \"bro\", \n",
+      "                \"date\": 1473589205, \n",
+      "                \"id\": 162, \n",
       "                \"out\": 0, \n",
       "                \"read_state\": 1, \n",
       "                \"title\": \" ... \", \n",
-      "                \"user_id\": 8438153\n",
+      "                \"user_id\": 70233893\n",
       "            }\n",
       "        ]\n",
       "    }\n",
