--- a/vkApi-Talgat.ipynb
+++ b/vkApi-Talgat.ipynb
@@ -1092,6 +1092,101 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "помощь\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "txt = ['помощь','help']\n",
+    "a='Помощь'.decode('utf-8').lower()\n",
+    "print a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "    command = {\n",
+    "        'bro':{\n",
+    "            'txt':['бро','bro']\n",
+    "            ,'answer':'bro!'\n",
+    "            ,'image':'photo,photo-128566598_432688170'\n",
+    "        },\n",
+    "        'lesson':{\n",
+    "            'txt':['lesson','расписание','что сегодня', 'на неделю']\n",
+    "            ,'answer':'Расписание: - нет расписания'\n",
+    "        },\n",
+    "        'shutka':{\n",
+    "            'txt':['шутка','анекдот','цитата','ещё','еще']\n",
+    "            ,'answer':'Расписание: - нет расписания'\n",
+    "        },\n",
+    "        'help':{\n",
+    "            'txt':['помощь','help']\n",
+    "            ,'answer':'Команды: \"шутка\" , \"расписание\", \"bro\"'\n",
+    "        },\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bro {'answer': 'bro!', 'image': 'photo,photo-128566598_432688170', 'txt': ['\\xd0\\xb1\\xd1\\x80\\xd0\\xbe', 'bro']}\n",
+      "lesson {'answer': '\\xd0\\xa0\\xd0\\xb0\\xd1\\x81\\xd0\\xbf\\xd0\\xb8\\xd1\\x81\\xd0\\xb0\\xd0\\xbd\\xd0\\xb8\\xd0\\xb5: - \\xd0\\xbd\\xd0\\xb5\\xd1\\x82 \\xd1\\x80\\xd0\\xb0\\xd1\\x81\\xd0\\xbf\\xd0\\xb8\\xd1\\x81\\xd0\\xb0\\xd0\\xbd\\xd0\\xb8\\xd1\\x8f', 'txt': ['lesson', '\\xd1\\x80\\xd0\\xb0\\xd1\\x81\\xd0\\xbf\\xd0\\xb8\\xd1\\x81\\xd0\\xb0\\xd0\\xbd\\xd0\\xb8\\xd0\\xb5', '\\xd1\\x87\\xd1\\x82\\xd0\\xbe \\xd1\\x81\\xd0\\xb5\\xd0\\xb3\\xd0\\xbe\\xd0\\xb4\\xd0\\xbd\\xd1\\x8f', '\\xd0\\xbd\\xd0\\xb0 \\xd0\\xbd\\xd0\\xb5\\xd0\\xb4\\xd0\\xb5\\xd0\\xbb\\xd1\\x8e']}\n",
+      "shutka {'answer': '\\xd0\\xa0\\xd0\\xb0\\xd1\\x81\\xd0\\xbf\\xd0\\xb8\\xd1\\x81\\xd0\\xb0\\xd0\\xbd\\xd0\\xb8\\xd0\\xb5: - \\xd0\\xbd\\xd0\\xb5\\xd1\\x82 \\xd1\\x80\\xd0\\xb0\\xd1\\x81\\xd0\\xbf\\xd0\\xb8\\xd1\\x81\\xd0\\xb0\\xd0\\xbd\\xd0\\xb8\\xd1\\x8f', 'txt': ['\\xd1\\x88\\xd1\\x83\\xd1\\x82\\xd0\\xba\\xd0\\xb0', '\\xd0\\xb0\\xd0\\xbd\\xd0\\xb5\\xd0\\xba\\xd0\\xb4\\xd0\\xbe\\xd1\\x82', '\\xd1\\x86\\xd0\\xb8\\xd1\\x82\\xd0\\xb0\\xd1\\x82\\xd0\\xb0', '\\xd0\\xb5\\xd1\\x89\\xd1\\x91', '\\xd0\\xb5\\xd1\\x89\\xd0\\xb5']}\n",
+      "help {'answer': '\\xd0\\x9a\\xd0\\xbe\\xd0\\xbc\\xd0\\xb0\\xd0\\xbd\\xd0\\xb4\\xd1\\x8b: \"\\xd1\\x88\\xd1\\x83\\xd1\\x82\\xd0\\xba\\xd0\\xb0\" , \"\\xd1\\x80\\xd0\\xb0\\xd1\\x81\\xd0\\xbf\\xd0\\xb8\\xd1\\x81\\xd0\\xb0\\xd0\\xbd\\xd0\\xb8\\xd0\\xb5\", \"bro\"', 'txt': ['\\xd0\\xbf\\xd0\\xbe\\xd0\\xbc\\xd0\\xbe\\xd1\\x89\\xd1\\x8c', 'help']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "read ='шутка'\n",
+    "\n",
+    "for cmd,otvet in command.iteritems():\n",
+    "    print cmd,otvet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bro', 'lesson', 'shutka', 'help']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print command.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
