--- a/notebooks/vkApi-Talgat.ipynb
+++ b/notebooks/vkApi-Talgat.ipynb
@@ -1168,21 +1168,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['bro', 'lesson', 'shutka', 'help']\n"
+     "data": {
+      "text/plain": [
+       "['shutka', 'help']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "command=['bro', 'lesson', 'shutka', 'help']\n",
+    "command[2:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'access_token' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-f2b5e9e02066>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mdef\u001b[0m \u001b[0mmessagesSend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0muser_id\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mchat_id\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mmessage\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m''\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mattachment\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m''\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0msticker_id\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m''\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0maccess_token\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0maccess_token\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     resp = requests.get(vk_url+'messages.send',\n\u001b[0;32m      3\u001b[0m             \u001b[1;34m'&user_id={}&peer_id={}&chat_id={}&message={}&attachment={}&sticker_id={}&access_token={}&v={}'\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m             .format(user_id,peer_id, chat_id,message,attachment,sticker_id,access_token,vk_ver))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'access_token' is not defined"
      ]
     }
    ],
    "source": [
-    "print command.keys()"
+    "def messagesSend(user_id,chat_id=1,message='',attachment='',sticker_id='',access_token=access_token):\n",
+    "    resp = requests.get(vk_url+'messages.send',\n",
+    "            '&user_id={}&peer_id={}&chat_id={}&message={}&attachment={}&sticker_id={}&access_token={}&v={}'\n",
+    "            .format(user_id,peer_id, chat_id,message,attachment,sticker_id,access_token,vk_ver))\n"
    ]
   },
   {
